# Synthetic_Patient

./: .env.example  .gitignore  .replit  README.md  app.py  components.json  curated_medical_cases.json  drizzle.config.ts  index.html  medquad_cases.json  package-lock.json  package.json  pyproject.toml  replit.md  replit.md.bak  tailwind.config.ts  vite.config.ts
attached_assets/: Pasted--DOCTYPE-html-html-class-dark-lang-en-head-meta-charset_1770066097689.txt  Pasted-1-GENERAL-SYSTEMIC-very-common-Acute-conditions-Viral-u_1770066148484.txt
backend/: .env.example  ai_schemas.py  ai_service.py  app.py  crud.py  database.py  db_setup.py  main.py  models.py  requirements.txt  schemas.py  seed_data.py  test_crud.py  training_cases.json
client/src/: App.tsx  index.css
client/src/components/: CaseCard.tsx
client/src/hooks/: use-chats.ts
client/src/pages/: Home.tsx  Quiz.tsx  Specialty.tsx
frontend/: tailwind.config.ts
frontend/client/: postcss.config.js  requirements.md
frontend/client/src/: App.tsx  index.css
frontend/client/src/components/: Navigation.tsx
frontend/client/src/components/feedback/: AIInsight.tsx  DecisionTree.tsx  MissedClues.tsx  ScoreRing.tsx  SimilarCases.tsx
frontend/client/src/contexts/: ThemeContext.tsx
frontend/client/src/hooks/: use-cases.ts
frontend/client/src/pages/: Chat.tsx  Dashboard.tsx  Feedback.tsx  Home.tsx  PatientCases.tsx  Quiz.tsx  not-found.tsx
frontend/script/: build.ts
frontend/server/: db.ts  index.ts  routes.ts  storage.ts
frontend/shared/: routes.ts  schema.ts
server/: storage.ts
shared/: routes.ts
